# chat-async

./: Cargo.toml
src/: get_my_ip.rs  lib.rs  main.rs
src/connect/: get_my_ip.rs  mod.rs
src/connect/multicast/: communicator.rs  join.rs  message.rs  mod.rs  server.rs
src/connect/multicast/communicator/: mod.rs  socket.rs
src/connect/multicast/communicator/ipc/: mod.rs  spawn_process.rs
