[package]
name = "chat_async"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
interprocess = { version = "2.2.3", features = ["tokio"] }
procspawn = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["net", "rt", "sync", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
incremental = false
